[gd_scene load_steps=7 format=1]

[ext_resource path="res://Core/Game.gd" type="Script" id=1]
[ext_resource path="res://Elements/General/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Elements/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Elements/StationManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Images/Tower2.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 606.738, 10.7938 )

[node name="Game" type="Node"]

script/script = ExtResource( 1 )

[node name="Sprite" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 483.18, 162.406 )

[node name="Player1" parent="." groups=[
"player",
"player_1",
] instance=ExtResource( 3 )]

transform/pos = Vector2( 290.833, 409.121 )
z/z = 100
team_group_name = "player_1"

[node name="Area2D" parent="Player1" groups=[
"player",
"player_1",
]]

editor/display_folded = true

[node name="Player2" parent="." groups=[
"player",
"player_2",
] instance=ExtResource( 3 )]

transform/pos = Vector2( 853.331, 410.915 )
z/z = 100
collision/layers = 2
collision/mask = 2
team_group_name = "player_2"

[node name="Area2D" parent="Player2" groups=[
"player",
"player_2",
]]

[node name="ControllerInput" parent="Player2"]

device_id = 1

[node name="StationManager1" parent="." groups=[
"player_1",
] instance=ExtResource( 4 )]

editor/display_folded = true
transform/pos = Vector2( 77.3824, 400.313 )
team_group_name = "player_1"

[node name="Tower" parent="StationManager1" groups=[
"player_1",
]]

[node name="EconomyStation" parent="StationManager1" groups=[
"economy_station",
"player_1",
]]

team_group_name = "player_1"

[node name="PowerUpStation" parent="StationManager1" groups=[
"power_up_station",
"player_1",
]]

team_group_name = "player_1"

[node name="StationManager2" parent="." groups=[
"player_2",
] instance=ExtResource( 4 )]

editor/display_folded = true
transform/pos = Vector2( 1121.41, 400 )
transform/scale = Vector2( -1, 1 )
team_group_name = "player_2"
orientation = -1

[node name="Tower" parent="StationManager2" groups=[
"player_2",
]]

[node name="Sprite" parent="StationManager2/Tower"]

texture = ExtResource( 5 )

[node name="EconomyStation" parent="StationManager2" groups=[
"economy_station",
"player_2",
]]

team_group_name = "player_2"

[node name="PowerUpStation" parent="StationManager2" groups=[
"power_up_station",
"player_2",
]]

team_group_name = "player_2"

[node name="floor" type="StaticBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 380.095, 622.178 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 216.442, -14.0302 )
shapes/0/trigger = false
collision/layers = 7
collision/mask = 7
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]

transform/pos = Vector2( 216.442, -14.0302 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="floor1" type="StaticBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( -305.803, 442.228 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.035232, 0, 0, 40.5211, 280.012, -266.628 )
shapes/0/trigger = false
collision/layers = 7
collision/mask = 7
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor1"]

transform/pos = Vector2( 280.012, -266.628 )
transform/scale = Vector2( 0.035232, 40.5211 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="floor2" type="StaticBody2D" parent="."]

transform/pos = Vector2( -305.803, 442.228 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.035232, 0, 0, 40.5211, 1532.43, -262.702 )
shapes/0/trigger = false
collision/layers = 7
collision/mask = 7
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor2"]

transform/pos = Vector2( 1532.43, -262.702 )
transform/scale = Vector2( 0.035232, 40.5211 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0


[editable path="Player1"]
[editable path="Player2"]
[editable path="StationManager1"]
[editable path="StationManager2"]
[editable path="StationManager2/Tower"]
